# model-comparison-agentcore

./: .gitignore  agentcore-runtime-policy.json  agentcore-trust-policy.json  invoke_math_agent.py  main.py  pyproject.toml
compare_models/: .env  agent.py  requirements.txt  system_prompt.txt
compare_models/tools/: get_agent.py
logic/: main.py  model_ids.py  pyproject.toml  run_async_pipeline.py  run_full_comparison.py  test_prompts.py
logic/compare_output/: comparison_summary_20250820_143143.json
logic/compare_output/prompt_1/: comparison_analyzed_eu_anthropic_claude-3-7-sonnet-20250219-v1_0_20250820_answered_eu_anthropic_claude-3-7-sonnet-20250219-v1_0_20250820_143143.txt  comparison_analyzed_eu_anthropic_claude-3-7-sonnet-20250219-v1_0_20250820_answered_eu_meta_llama3-2-3b-instruct-v1_0_20250820_143143.txt  comparison_analyzed_eu_meta_llama3-2-3b-instruct-v1_0_20250820_answered_eu_anthropic_claude-3-7-sonnet-20250219-v1_0_20250820_143143.txt  comparison_analyzed_eu_meta_llama3-2-3b-instruct-v1_0_20250820_answered_eu_meta_llama3-2-3b-instruct-v1_0_20250820_143143.txt
logic/compare_output/prompt_2/: comparison_analyzed_eu_anthropic_claude-3-7-sonnet-20250219-v1_0_20250820_answered_eu_anthropic_claude-3-7-sonnet-20250219-v1_0_20250820_143143.txt  (+3 more)
logic/math_output/: summary_20250820_142946.json
logic/math_output/prompt_1/: output_eu_anthropic_claude-3-7-sonnet-20250219-v1_0_20250820_142946.txt  (+1 more)
logic/tools/: test_async_pipeline.py  test_compare_models.py  test_math_agent.py
math_agent2/: agent.py
math_agent2/tools/: get_agent.py  system_prompt.py
(+14 files in other folders)
